--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -26,7 +26,7 @@
                     <h3>Welcome to DreamFactory!</h3>
 
                     <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
-                    <p data-ng-init="resources = [
+                    <div data-ng-init="resources = [
                         {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
                         {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
                         {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
@@ -44,7 +44,7 @@
                                 <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
                             </div>
                         </div>
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,7 +56,9 @@
                         <h4>
                             <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
                         </h4>
-                        Did you know Dreamfctory’s commercial solutions include connectors for Microsoft SQL Server, Oracle, SOAP-to-REST, API limiting, ELK stack integration, and much more? Contact Us to arrange a demo with our engineering team!
+                        <p>
+                            Did you know Dreamfctory’s commercial solutions include connectors for Microsoft SQL Server, Oracle, SOAP-to-REST, API limiting, ELK stack integration, and much more? Contact Us to arrange a demo with our engineering team!
+                        </p>
                     </div>
 
                 </div>
@@ -70,10 +72,12 @@
                         <h4>
                             <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
                         </h4>
-                        Has Dreamfactory made a difference in your organization?
-                        Are you doing something novel and interesting with our software?
-                        We’d love to add your story to the Dreamfactory.com user showcase!
-                        E-mail us at <b>info@dreamfactory.com</b> with your project details and we’ll add your organization name, URL, and story to our site!
+                        <p>
+                            Has Dreamfactory made a difference in your organization?
+                            Are you doing something novel and interesting with our software?
+                            We’d love to add your story to the Dreamfactory.com user showcase!
+                            E-mail us at <b>info@dreamfactory.com</b> with your project details and we’ll add your organization name, URL, and story to our site!
+                        </p>
                     </div>
                 </div>
             </div>
