--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -9,6 +9,10 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
     background-color: #ffffff;
 
+    p {
+      line-height: 1.7;
+    }
+
     &.outligned {
       border-radius: 4px;
       box-shadow: 0 6px 10px -5px rgba(0, 0, 0, 0.2);
@@ -124,7 +128,7 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
         font-stretch: normal;
         line-height: 1.75;
         letter-spacing: normal;
-        font-size: 16px;
+        font-size: 15px;
 
         h3 {
           margin-top: 0px;
@@ -132,6 +136,11 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
           font-size: 25px;
           font-weight: bold;
           margin-bottom: 0px;
+          padding-bottom: 10px;
+        }
+
+        p {
+          padding-bottom: 20px;
         }
       }
 
@@ -198,6 +207,12 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
         padding-bottom: 3px;
 
         margin-bottom: 10px;
+
+        &:hover, & a:hover {
+          text-decoration: none;
+          color: $text-color;
+          opacity: 0.88;
+        }
       }
     }
   }
