--- a/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
@@ -8,3 +8,6 @@ $df-headers-color: #2e2ea3;
 
 $well-bg: $df-section-background;
 $well-border: $df-section-background;
+
+$navbar-default-link-hover-color: $text-color;
+$navbar-default-link-hover-bg: #f7f9fa;
