Align downloads on welcome to the left

--- a/app/styles/sass/partials/themes/matan-light/_homepage.scss
+++ b/app/styles/sass/partials/themes/matan-light/_homepage.scss
@@ -61,19 +61,28 @@ $top-circle-centering: "32% - (#{ $play-circle-diameter }) / 2";
 
 
   .grid-24 {
+
     @media (min-width: $screen-md-min) {
       &.col-md-24 {
         width: percentage(1);
       }
+
+      &.col-md-22 {
+        width: percentage(22 / 24);
+      }
+
+      &.col-md-offset-1 {
+        margin-left: percentage(1 / 24);
+      }
     }
 
     @media (min-width: $screen-lg-min) {
-      &.col-lg-offset-1 {
-        margin-left: percentage(1 / 24);;
-      }
-
       &.col-lg-22 {
         width: percentage(22 / 24);
+      }
+
+      &.col-lg-offset-1 {
+        margin-left: percentage(1 / 24);;
       }
     }
   }
