--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -87,6 +87,37 @@
 
 
     <div class="row">
+
+        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
+            <div class="row">
+                <div class="second-banner-container grid-24 col-sm-10 col-sm-offset-1 col-md-22 col-md-offset-1 col-lg-22 col-lg-offset-1">
+                    <h4 class="examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
+
+                    <div class="example-item-container" data-ng-init="nativeExamples = [
+                    {name: 'Objective-C',    url: 'https://github.com/dreamfactorysoftware/ios-sdk',       icon: 'in_product_apple_lil.png'},
+                    {name: 'Apple Swift',    url: 'https://github.com/dreamfactorysoftware/ios-swift-sdk', icon: 'in_product_swift_lil.png'},
+                    {name: 'Android Java',   url: 'https://github.com/dreamfactorysoftware/android-sdk',   icon: 'in_product_android_lil.png'},
+                    {name: 'Microsoft .NET', url: 'https://github.com/dreamfactorysoftware/.net-sdk',      icon: 'in_product_dotnet_lil.png'}
+                ]">
+
+                        <div class="text-center" style="display: inline-block; padding-left: 0px;padding-right: 30px;" data-ng-repeat="example in nativeExamples">
+                            <a href="{{example.url}}" target="_blank">
+                                <div class="banner outligned example-item">
+                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                </div>
+                                <div class="text-center example-item-name">
+                                    {{example.name}}
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
         <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
             <div class="second-banner-container grid-24 col-md-24 col-lg-22 col-lg-offset-1">
                 <hr class="content-divider">
