--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9058,59 +9058,67 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   padding-right: 15px;
 }
 @media (min-width: 992px) {
-  /* line 65, partials/themes/matan-light/_homepage.scss */
+  /* line 66, partials/themes/matan-light/_homepage.scss */
   .main-page .grid-24.col-md-24 {
     width: 100%;
   }
-}
-@media (min-width: 1200px) {
-  /* line 71, partials/themes/matan-light/_homepage.scss */
-  .main-page .grid-24.col-lg-offset-1 {
+  /* line 70, partials/themes/matan-light/_homepage.scss */
+  .main-page .grid-24.col-md-22 {
+    width: 91.66666667%;
+  }
+  /* line 74, partials/themes/matan-light/_homepage.scss */
+  .main-page .grid-24.col-md-offset-1 {
     margin-left: 4.16666667%;
   }
-  /* line 75, partials/themes/matan-light/_homepage.scss */
+}
+@media (min-width: 1200px) {
+  /* line 80, partials/themes/matan-light/_homepage.scss */
   .main-page .grid-24.col-lg-22 {
     width: 91.66666667%;
   }
+  /* line 84, partials/themes/matan-light/_homepage.scss */
+  .main-page .grid-24.col-lg-offset-1 {
+    margin-left: 4.16666667%;
+  }
 }
-/* line 82, partials/themes/matan-light/_homepage.scss */
+/* line 91, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .bdivider {
   margin-top: 40px;
 }
-/* line 86, partials/themes/matan-light/_homepage.scss */
+/* line 95, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .first-banner {
   margin-top: 30px;
   padding-left: 15px;
   padding-right: 15px;
 }
-/* line 92, partials/themes/matan-light/_homepage.scss */
+/* line 101, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .first-banner .first-banner-container {
   padding-top: 15px;
   padding-bottom: 25px;
 }
-/* line 98, partials/themes/matan-light/_homepage.scss */
+/* line 107, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .first-banner .first-banner-container > div {
   display: inline-block;
   padding-top: 10px;
   padding-bottom: 20px;
 }
-/* line 103, partials/themes/matan-light/_homepage.scss */
+/* line 112, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .first-banner .first-banner-container > div h4 {
   font-weight: bold;
   color: #2e2ea3;
   font-size: 14px;
 }
-/* line 108, partials/themes/matan-light/_homepage.scss */
+/* line 117, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .first-banner .first-banner-container > div h4 i.fa {
   color: #faa20c;
 }
-/* line 116, partials/themes/matan-light/_homepage.scss */
+/* line 125, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner {
   padding-left: 15px;
   padding-right: 15px;
   margin-top: 30px;
 }
-/* line 122, partials/themes/matan-light/_homepage.scss */
+/* line 131, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .second-banner-container {
   padding-right: 0px;
   padding-left: 0px;
@@ -9120,7 +9128,7 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   letter-spacing: normal;
   font-size: 15px;
 }
-/* line 133, partials/themes/matan-light/_homepage.scss */
+/* line 142, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .second-banner-container h3 {
   margin-top: 0px;
   color: #2e2ea3;
@@ -9129,21 +9137,21 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   margin-bottom: 0px;
   padding-bottom: 10px;
 }
-/* line 142, partials/themes/matan-light/_homepage.scss */
+/* line 151, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .second-banner-container p {
   padding-bottom: 20px;
 }
-/* line 147, partials/themes/matan-light/_homepage.scss */
+/* line 156, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview {
   width: 80%;
   display: block;
   position: relative;
 }
-/* line 152, partials/themes/matan-light/_homepage.scss */
+/* line 161, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview img {
   width: 100%;
 }
-/* line 156, partials/themes/matan-light/_homepage.scss */
+/* line 165, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay {
   width: 100%;
   height: 60%;
@@ -9152,12 +9160,12 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   left: 0;
   z-index: 20;
 }
-/* line 165, partials/themes/matan-light/_homepage.scss */
+/* line 174, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay.blured {
   opacity: 0.8;
   background-color: #ffffff;
 }
-/* line 170, partials/themes/matan-light/_homepage.scss */
+/* line 179, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay.circle {
   width: calc(2vw + 30px);
   height: calc(2vw + 30px);
@@ -9168,25 +9176,25 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   border: 1px #5b5bd9 solid;
   text-align: center;
 }
-/* line 180, partials/themes/matan-light/_homepage.scss */
+/* line 189, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay.circle .fa-play {
   vertical-align: middle;
   font-size: calc(1vw + 10px);
   margin-left: 9%;
   color: #5b5bd9;
 }
-/* line 188, partials/themes/matan-light/_homepage.scss */
+/* line 197, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay.text {
   text-align: center;
   font-size: 14px;
 }
-/* line 192, partials/themes/matan-light/_homepage.scss */
+/* line 201, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .df-mac-preview .df-mac-preview-overlay.text > div {
   display: block;
   margin-top: calc(30% + (1vw / 3) + 3px);
   color: #0a0a75;
 }
-/* line 201, partials/themes/matan-light/_homepage.scss */
+/* line 210, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .resource-link {
   display: inline-block;
   padding-right: 15px;
@@ -9195,19 +9203,19 @@ html body .df-section-toolbar .well .left-arrow i, html body .df-section-toolbar
   padding-bottom: 3px;
   margin-bottom: 10px;
 }
-/* line 211, partials/themes/matan-light/_homepage.scss */
+/* line 220, partials/themes/matan-light/_homepage.scss */
 .main-page #welcomePage .second-banner .resource-link:hover, .main-page #welcomePage .second-banner .resource-link a:hover {
   text-decoration: none;
   color: #1d3d56;
   opacity: 0.88;
 }
-/* line 222, partials/themes/matan-light/_homepage.scss */
+/* line 231, partials/themes/matan-light/_homepage.scss */
 .main-page #downloadPage h4 {
   font-size: 16px;
   font-weight: normal;
   margin-bottom: 20px;
 }
-/* line 228, partials/themes/matan-light/_homepage.scss */
+/* line 237, partials/themes/matan-light/_homepage.scss */
 .main-page #downloadPage p {
   font-size: 16px;
   line-height: 1.75;
