--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -91,8 +91,14 @@
         <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
             <div class="row">
                 <div class="second-banner-container grid-24 col-sm-10 col-sm-offset-1 col-md-22 col-md-offset-1 col-lg-22 col-lg-offset-1">
-                    <h4 class="examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
+                    <div style="overflow: auto">
+                        <hr class="content-divider">
+                    </div>
+                    <div style="overflow: auto">
+                        <h4 class="examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
+                    </div>
 
+                    <p class="examples-subheading">Native Examples</p>
                     <div class="example-item-container" data-ng-init="nativeExamples = [
                     {name: 'Objective-C',    url: 'https://github.com/dreamfactorysoftware/ios-sdk',       icon: 'in_product_apple_lil.png'},
                     {name: 'Apple Swift',    url: 'https://github.com/dreamfactorysoftware/ios-swift-sdk', icon: 'in_product_swift_lil.png'},
@@ -111,37 +117,18 @@
                             </a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+                    <p class="examples-subheading">JavaScript Examples</p>
+                    <div class="example-item-container" data-ng-init="javascriptExamples = [
+                        {name: 'JavaScript', url: 'https://github.com/dreamfactorysoftware/javascript-sdk', icon: 'in_product_javascript_lil.png'},
+                        {name: 'Ionic',      url: 'https://github.com/dreamfactorysoftware/ionic-sdk',      icon: 'in_product_ionic_lil.png'},
+                        {name: 'Titanium',   url: 'https://github.com/dreamfactorysoftware/titanium-sdk',   icon: 'in_product_titanium_lil.png'},
+                        {name: 'AngularJS',  url: 'https://github.com/dreamfactorysoftware/angular-sdk',    icon: 'in_product_angular_lil.svg'},
+                        {name: 'Angular 2',  url: 'https://github.com/dreamfactorysoftware/angular2-sdk',   icon: 'in_product_angular2_lil.png'},
+                        {name: 'React',      url: 'https://github.com/dreamfactorysoftware/reactjs-sdk',    icon: 'in_product_reactjs_lil.png'}
+                    ]">
 
-    <div class="row">
-        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0 col-lg-12 col-lg-offset-0">
-            <div class="second-banner-container grid-24 col-md-24 col-lg-22 col-lg-offset-1">
-                <hr class="content-divider">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-                        <h4 class="text-center examples-heading">Click on a client platform below to download a sample application and learn how to make API calls:</h4>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <p class="text-center examples-subheading">Native Examples</p>
-                    </div>
-                </div>
-
-                <div class="row" data-ng-init="nativeExamples = [
-                    {name: 'Objective-C',    url: 'https://github.com/dreamfactorysoftware/ios-sdk',       icon: 'in_product_apple_lil.png'},
-                    {name: 'Apple Swift',    url: 'https://github.com/dreamfactorysoftware/ios-swift-sdk', icon: 'in_product_swift_lil.png'},
-                    {name: 'Android Java',   url: 'https://github.com/dreamfactorysoftware/android-sdk',   icon: 'in_product_android_lil.png'},
-                    {name: 'Microsoft .NET', url: 'https://github.com/dreamfactorysoftware/.net-sdk',      icon: 'in_product_dotnet_lil.png'}
-                ]">
-                    <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 example-item-container">
-                        <div class="col-xs-6 col-sm-3 col-md-3 text-center" data-ng-repeat="example in nativeExamples">
+                        <div class="text-center" style="display: inline-block; padding-left: 0px;padding-right: 30px;" data-ng-repeat="example in javascriptExamples">
                             <a href="{{example.url}}" target="_blank">
                                 <div class="banner outligned example-item">
                                     <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
@@ -152,42 +139,12 @@
                             </a>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <p class="text-center examples-subheading">JavaScript Examples</p>
+                    <div style="overflow: auto">
+                        <hr class="content-divider">
                     </div>
-                </div>
-
-                <div class="row" data-ng-init="javascriptExamples = [
-                    {name: 'JavaScript', url: 'https://github.com/dreamfactorysoftware/javascript-sdk', icon: 'in_product_javascript_lil.png'},
-                    {name: 'Ionic',      url: 'https://github.com/dreamfactorysoftware/ionic-sdk',      icon: 'in_product_ionic_lil.png'},
-                    {name: 'Titanium',   url: 'https://github.com/dreamfactorysoftware/titanium-sdk',   icon: 'in_product_titanium_lil.png'},
-                    {name: 'AngularJS',  url: 'https://github.com/dreamfactorysoftware/angular-sdk',    icon: 'in_product_angular_lil.svg'},
-                    {name: 'Angular 2',  url: 'https://github.com/dreamfactorysoftware/angular2-sdk',   icon: 'in_product_angular2_lil.png'},
-                    {name: 'React',      url: 'https://github.com/dreamfactorysoftware/reactjs-sdk',    icon: 'in_product_reactjs_lil.png'}
-                ]">
-
-                    <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 example-item-container">
-                        <div class="col-xs-6 col-sm-3 col-md-2 text-center" data-ng-repeat="example in javascriptExamples">
-                            <a href="{{example.url}}" target="_blank">
-                                <div class="banner outligned example-item">
-                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
-                                </div>
-                                <div class="text-center example-item-name">
-                                    {{example.name}}
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <hr class="content-divider">
                 </div>
             </div>
         </div>
     </div>
-
-
 </div>
