Start table styling on apps tab

--- a/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
@@ -11,3 +11,7 @@ $well-border: $df-section-background;
 
 $navbar-default-link-hover-color: $text-color;
 $navbar-default-link-hover-bg: #f7f9fa;
+
+$table-border-color: transparent !default;
+
+$panel-border-radius: 5px;
