--- a/app/admin_components/adf-apps/views/df-manage-apps.html
+++ b/app/admin_components/adf-apps/views/df-manage-apps.html
@@ -44,29 +44,30 @@
                             <tbody>
                             <tr data-ng-repeat="obj in apps | orderObjectBy:order.orderBy:order.orderByReverse" class="repeated-item" data-ng-class="obj.__dfUI.selected ? 'danger' : ''">
                                 <td style="width: 80px;">
-
-
-                                    <div class="btn-group btn-group-xs" >
-                                        <div class="" style="margin-right: 5px; display: inline-block; float:left">
-                                            <input id="apps_table_row_checkbox_{{obj.record.id}}"  type="checkbox" data-ng-checked="obj.__dfUI.selected" data-ng-click="setSelected(obj)" />
+                                    <div class="cell-content">
+                                        <div class="btn-group btn-group-xs" >
+                                            <div class="" style="margin-right: 5px; display: inline-block; float:left">
+                                                <input id="apps_table_row_checkbox_{{obj.record.id}}"  type="checkbox" data-ng-checked="obj.__dfUI.selected" data-ng-click="setSelected(obj)" />
+                                            </div>
+                                            <button id="apps_table_row_delete_{{obj.record.id}}" type="button" class="btn btn-default btn-xs" data-ng-click="deleteApp(obj)" title="Delete app"><i class="fa fa-trash"></i></button>
+                                            <button id="apps_table_row_launch_{{obj.record.id}}" type="button" class="btn btn-default btn-xs" data-ng-click="launchApp(obj)" data-ng-disabled="!obj.record.launch_url" title="Launch app"><i class="fa fa-play"></i></button>
                                         </div>
-                                        <button id="apps_table_row_delete_{{obj.record.id}}" type="button" class="btn btn-default btn-xs" data-ng-click="deleteApp(obj)" title="Delete app"><i class="fa fa-trash"></i></button>
-                                        <button id="apps_table_row_launch_{{obj.record.id}}" type="button" class="btn btn-default btn-xs" data-ng-click="launchApp(obj)" data-ng-disabled="!obj.record.launch_url" title="Launch app"><i class="fa fa-play"></i></button>
                                     </div>
-
                                 </td>
                                 <td id="apps_table_row_{{$index}}_{{obj.record.id}}" data-ng-click="editApp(obj.record)" data-ng-repeat="value in obj.record | orderAndShowValue : fields track by $index">
-                                    <span ng-if="fields[$index].name === 'api_key'" style="white-space:nowrap;">
+                                    <div class="cell-content">
+                                        <span ng-if="fields[$index].name === 'api_key'" style="white-space:nowrap;">
                                         <span id="apps_table_row_{{$index}}_{{obj.record.id}}_api_key">{{value}}</span>
                                         &nbsp;
                                         <i class="fa fa-clipboard" ngclipboard data-clipboard-target="#apps_table_row_{{$index}}_{{obj.record.id}}_api_key" data-ng-click="$event.stopPropagation()" title="Copy to clipboard"></i>
                                     </span>
-                                    <span ng-if="fields[$index].name === 'role_by_role_id'">
+                                        <span ng-if="fields[$index].name === 'role_by_role_id'">
                                         {{value.name}}
                                     </span>
-                                    <span ng-if="fields[$index].name !== 'api_key' && fields[$index].name != 'role_by_role_id'">
+                                        <span ng-if="fields[$index].name !== 'api_key' && fields[$index].name != 'role_by_role_id'">
                                         {{value}}
                                     </span>
+                                    </div>
                                 </td>
                             </tr>
                             </tbody>
@@ -75,7 +76,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 
