--- a/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
@@ -139,3 +139,67 @@ body .df-sidebar-nav {
   border-color: transparent;
   opacity: 1!important;
 }
+
+div.panel .table, table.table, table.table.table-striped {
+  //border-radius: 4px!important;
+
+  //thead, tbody, tr, th, td {
+  //  padding: 0px!important;
+  //}
+
+  & > thead, & > thead tr {
+    background-color: #1d3d56;
+    color: #ffffff;
+    height: 38px;
+
+    th {
+      vertical-align: middle;
+    }
+  }
+
+  & > tbody > tr {
+
+    //height: 40px;
+    //border-bottom: 40px solid #F7F9FA;
+    border-radius: 4px;
+
+    td {
+      padding: 0px;
+      border: 0px;
+      background-color: #F7F9FA;
+      color: #2b5172;
+
+      .cell-content {
+        margin-top: 5px;
+        padding-top: 8px;
+        min-height: 58px;
+        background-color: #ffffff;
+        display: table;
+        line-height: 14px;
+        word-wrap: break-word;
+        width: 100%;
+        box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+
+        * {
+          margin-top: 0px;
+          padding-top: 0px;
+          vertical-align: top;
+        }
+
+        & > * {
+          display: table-cell;
+          vertical-align: top;
+          padding-top: 16px;
+        }
+
+        & > *:first-child {
+          padding-left: 13px;
+        }
+      }
+    }
+  }
+}
+
+.panel {
+  border: none;
+}
