--- a/app/styles/sass/styles.css
+++ b/app/styles/sass/styles.css
@@ -9335,59 +9335,75 @@ body .df-sidebar-nav .nav-pills li.active:hover a {
   opacity: 1 !important;
 }
 
-/* line 150, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 147, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead, div.panel .table > thead tr, table.table > thead, table.table > thead tr, table.table.table-striped > thead, table.table.table-striped > thead tr {
   background-color: #1d3d56;
   color: #ffffff;
   height: 38px;
 }
-/* line 155, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 152, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > thead th, div.panel .table > thead tr th, table.table > thead th, table.table > thead tr th, table.table.table-striped > thead th, table.table.table-striped > thead tr th {
   vertical-align: middle;
 }
-/* line 160, partials/themes/matan-light/_bootswatch_overrides.scss */
-div.panel .table > tbody > tr, table.table > tbody > tr, table.table.table-striped > tbody > tr {
-  border-radius: 4px;
+/* line 155, partials/themes/matan-light/_bootswatch_overrides.scss */
+div.panel .table > thead th > *, div.panel .table > thead tr th > *, table.table > thead th > *, table.table > thead tr th > *, table.table.table-striped > thead th > *, table.table.table-striped > thead tr th > * {
+  padding-bottom: 3px;
 }
-/* line 166, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 164, partials/themes/matan-light/_bootswatch_overrides.scss */
+div.panel .table > tbody > tr > td:first-child > .cell-content, table.table > tbody > tr > td:first-child > .cell-content, table.table.table-striped > tbody > tr > td:first-child > .cell-content {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+/* line 170, partials/themes/matan-light/_bootswatch_overrides.scss */
+div.panel .table > tbody > tr > td:last-child > .cell-content, table.table > tbody > tr > td:last-child > .cell-content, table.table.table-striped > tbody > tr > td:last-child > .cell-content {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+/* line 175, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td, table.table > tbody > tr td, table.table.table-striped > tbody > tr td {
   padding: 0px;
   border: 0px;
   background-color: #F7F9FA;
   color: #2b5172;
+  height: 58px;
+  min-width: 80px;
 }
-/* line 172, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 183, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content, table.table > tbody > tr td .cell-content, table.table.table-striped > tbody > tr td .cell-content {
-  margin-top: 5px;
+  margin-top: 3px;
+  margin-bottom: 3px;
   padding-top: 8px;
   min-height: 58px;
   background-color: #ffffff;
-  display: table;
+  display: block;
   line-height: 14px;
   word-wrap: break-word;
   width: 100%;
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+  height: 92%;
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
-/* line 183, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 196, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content *, table.table > tbody > tr td .cell-content *, table.table.table-striped > tbody > tr td .cell-content * {
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
 }
-/* line 189, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 202, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *, table.table > tbody > tr td .cell-content > *, table.table.table-striped > tbody > tr td .cell-content > * {
   display: table-cell;
   vertical-align: top;
   padding-top: 16px;
+  padding-bottom: 16px;
 }
-/* line 195, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 209, partials/themes/matan-light/_bootswatch_overrides.scss */
 div.panel .table > tbody > tr td .cell-content > *:first-child, table.table > tbody > tr td .cell-content > *:first-child, table.table.table-striped > tbody > tr td .cell-content > *:first-child {
   padding-left: 13px;
 }
 
-/* line 203, partials/themes/matan-light/_bootswatch_overrides.scss */
+/* line 218, partials/themes/matan-light/_bootswatch_overrides.scss */
 .panel {
   border: none;
+  box-shadow: none;
 }
 
 /* line 9, partials/_base.scss */
